--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <h1 id="title">Survey Form</h1>
   <p id="description">Please fill this form with all the necessary fields marked with <sup>*</sup> <br> to let us know the courses you are interested in.</p>
-  <form id="survey-form">
+  <form id="survey-form" action="https://formspree.io/f/mdkorega" method="post">
     <div>
       <label for="name" id="name-label">Name:</label><br>
       <input class="input-elm" type="text" name="name" id="name" required placeholder="Your Full Name">
